--- a/index.html
+++ b/index.html
@@ -10,6 +10,47 @@
 
 <body>
     <h1 id="title">Are you love Math?</h1>
+    <p id="description">WE invites readers to share about their early math and science learning experiences and to explore the interactive survey results.</p>
+    <form id="survey-form">
+        <label id="name-label" for="Name">Name :</label>
+        <input type="text" id="name" placeholder="Enter your name" required><br><br>
+        <label id="email-label" for="Email"> Email: </label>
+        <input type="email" id="email" required placeholder="Enter your email"><br><br>
+        <label id="number-label" for="Age">Age:</label>
+        <input type="number" id="number" required placeholder="Enter your Age" min="1" max="3"><br><br>
+        <label for="cars">Which option best describes your current role?</label>
+        <select name="dropdown" id="dropdown">
+    <option value="student">Student</option>
+    <option value="full time job">Full Time Job</option>
+    <option value="full time learner">Full Time Learner</option>
+    <option value="other">Other</option>
+  </select>
+        <br><br>
+        <p>Please select your gender:</p>
+        <input type="radio" id="male" name="gender" value="male">
+        <label for="male">Male</label><br>
+        <input type="radio" id="female" name="gender" value="female">
+        <label for="female">Female</label><br>
+        <input type="radio" id="other" name="gender" value="other">
+        <label for="other">Other</label>
+
+        <br>
+        <p>Would you recommend studying mathematics to a friend ? </p>
+        <input type="checkbox" name="definitely" value="Definitely">
+        <label for="maybe"> Definitely</label><br>
+        <input type="checkbox" name="maybe" value="Maybe">
+        <label for="Maybe">Maybe</label><br>
+        <input type="checkbox" name=" Not sure" value=" Not sure">
+        <label for=" not sure"> Not sure</label><br><br>
+        <label for="comment">Any comment or suggestion?</label><br>
+        <textarea id="comment" name="comment" rows="4" cols="50">
+  Enter your comment here.....
+  </textarea>
+        <br><br>
+        <input type="submit" id="submit">
+    </form>
+
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
