--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <h1 id="title">Are you love Math?</h1>
     <p id="description">WE invites readers to share about their early math and science learning experiences and to explore the interactive survey results.</p>
     <form id="survey-form">
-        <label id="name-label" for="Name">Name :</label>
+        <label id="name-label" for="Name">Name</label><br>
         <input type="text" id="name" placeholder="Enter your name" required><br><br>
-        <label id="email-label" for="Email"> Email: </label>
+        <label id="email-label" for="Email"> Email</label><br>
         <input type="email" id="email" required placeholder="Enter your email"><br><br>
-        <label id="number-label" for="Age">Age:</label>
+        <label id="number-label" for="Age">Age</label><br>
         <input type="number" id="number" required placeholder="Enter your Age" min="6" max="90"><br><br>
-        <label for="cars">Which option best describes your current role?</label>
+        <label for="cars">Which option best describes your current role?</label><br>
         <select name="dropdown" id="dropdown">
     <option value="student">Student</option>
     <option value="full time job">Full Time Job</option>
@@ -27,24 +27,25 @@
     <option value="other">Other</option>
   </select>
         <br><br>
-        <p>Please select your gender:</p>
-        <input type="radio" id="male" name="gender" value="male">
-        <label for="male">Male</label><br>
-        <input type="radio" id="female" name="gender" value="female">
-        <label for="female">Female</label><br>
-        <input type="radio" id="other" name="gender" value="other">
-        <label for="other">Other</label>
+        <section class="section">
+            <p>Please select your gender:</p>
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="male">Male</label><br>
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Female</label><br>
+            <input type="radio" id="other" name="gender" value="other">
+            <label for="other">Other</label>
 
-        <br>
-        <p>Would you recommend studying mathematics to a friend ? </p>
-        <input type="checkbox" name="definitely" value="Definitely">
-        <label for="maybe"> Definitely</label><br>
-        <input type="checkbox" name="maybe" value="Maybe">
-        <label for="Maybe">Maybe</label><br>
-        <input type="checkbox" name=" Not sure" value=" Not sure">
-        <label for=" not sure"> Not sure</label><br><br>
-        <label for="comment">Any comment or suggestion?</label><br>
-        <textarea id="comment" name="comment" rows="4" cols="50">
+            <br>
+            <p>Would you recommend studying mathematics to a friend ? </p>
+            <input type="checkbox" name="definitely" value="Definitely">
+            <label for="maybe"> Definitely</label><br>
+            <input type="checkbox" name="maybe" value="Maybe">
+            <label for="Maybe">Maybe</label><br>
+            <input type="checkbox" name=" Not sure" value=" Not sure">
+            <label for=" not sure"> Not sure</label><br><br>
+            <label for="comment">Any comment or suggestion?</label><br></section>
+        <textarea id="comment" name="comment">
   Enter your comment here.....
   </textarea>
         <br><br>
